deploy: 72016afd46c6c3d49fb8af1596264ed77f09da9c

--- a/classes/IdRegistry.html
+++ b/classes/IdRegistry.html
@@ -28,7 +28,7 @@ IDs are generated using nanoid.</p>
 <ul class="tsd-hierarchy">
 <li><span class="target">IdRegistry</span></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L16">IdRegistry.mts:16</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L16">IdRegistry.mts:16</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -67,7 +67,7 @@ IDs are generated using nanoid.</p>
 fast lookups.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L21">IdRegistry.mts:21</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L21">IdRegistry.mts:21</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="custom" class="tsd-anchor"></a>
@@ -87,7 +87,7 @@ meaningful IDs, such as the IDs of layers.</p>
 <h5>id: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L45">IdRegistry.mts:45</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L45">IdRegistry.mts:45</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="exists" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>exists</span><a href="#exists" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -104,7 +104,7 @@ meaningful IDs, such as the IDs of layers.</p>
 <h5>id: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L65">IdRegistry.mts:65</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L65">IdRegistry.mts:65</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="free" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>free</span><a href="#free" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -121,7 +121,7 @@ meaningful IDs, such as the IDs of layers.</p>
 <h5>id: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L57">IdRegistry.mts:57</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L57">IdRegistry.mts:57</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="id" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>id</span><a href="#id" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -140,7 +140,7 @@ meaningful IDs, such as the IDs of layers.</p>
 </div></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L28">IdRegistry.mts:28</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L28">IdRegistry.mts:28</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="toString" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>to<wbr/>String</span><a href="#toString" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
@@ -148,7 +148,7 @@ meaningful IDs, such as the IDs of layers.</p>
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/IdRegistry.mts#L70">IdRegistry.mts:70</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/IdRegistry.mts#L70">IdRegistry.mts:70</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -171,6 +171,7 @@ meaningful IDs, such as the IDs of layers.</p>
 <li><a href="../modules.html">@ffstudios/ribbit.js</a>
 <ul>
 <li class="tsd-kind-namespace"><a href="../modules/components.html">components</a></li>
+<li class="tsd-kind-namespace"><a href="../modules/macros.html">macros</a></li>
 <li class="tsd-kind-namespace"><a href="../modules/objects.html">objects</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
