--- a/classes/Layer.html
+++ b/classes/Layer.html
@@ -28,7 +28,7 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 <ul class="tsd-hierarchy">
 <li><span class="target">Layer</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L9">Layer.mts:9</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L9">Layer.mts:9</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -72,19 +72,19 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 <h4 class="tsd-returns-title">Returns <a href="Layer.html" class="tsd-signature-type" data-tsd-kind="Class">Layer</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="canvas" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>canvas</span><a href="#canvas" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">canvas<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">OffscreenCanvas</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L10">Layer.mts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L10">Layer.mts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="ctx" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>ctx</span><a href="#ctx" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">ctx<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">OffscreenCanvasRenderingContext2D</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L11">Layer.mts:11</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L11">Layer.mts:11</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="id" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>id</span><a href="#id" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -92,7 +92,7 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#id">id</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L24">RibbitObject.mts:24</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L24">RibbitObject.mts:24</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected tsd-is-inherited"><a id="log" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <code class="tsd-tag ts-flagOptional">Optional</code> <code class="tsd-tag ts-flagReadonly">Readonly</code> <span>log</span><a href="#log" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">log<span class="tsd-signature-symbol">?:</span> <a href="../types/Logan.html" class="tsd-signature-type" data-tsd-kind="Type alias">Logan</a></div>
@@ -100,12 +100,12 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#log">log</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L28">RibbitObject.mts:28</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L28">RibbitObject.mts:28</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="name" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>name</span><a href="#name" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="ribbit" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>ribbit</span><a href="#ribbit" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">ribbit<span class="tsd-signature-symbol">:</span> <a href="Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a></div>
@@ -113,12 +113,12 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#ribbit">ribbit</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L33">RibbitObject.mts:33</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L33">RibbitObject.mts:33</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="z" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>z</span><a href="#z" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">z<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Layer.mts#L13">Layer.mts:13</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a id="details" class="tsd-anchor"></a>
@@ -131,7 +131,7 @@ drawn to the main canvas in the order of the layer&#39;s z-index.</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#details">details</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L66">RibbitObject.mts:66</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L66">RibbitObject.mts:66</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a id="toString" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>to<wbr/>String</span><a href="#toString" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
@@ -143,7 +143,7 @@ details returned by the <a href="Layer.html#details">details</a> method. This is
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#toString">toString</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L74">RibbitObject.mts:74</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L74">RibbitObject.mts:74</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -166,6 +166,7 @@ details returned by the <a href="Layer.html#details">details</a> method. This is
 <li><a href="../modules.html">@ffstudios/ribbit.js</a>
 <ul>
 <li class="tsd-kind-namespace"><a href="../modules/components.html">components</a></li>
+<li class="tsd-kind-namespace"><a href="../modules/macros.html">macros</a></li>
 <li class="tsd-kind-namespace"><a href="../modules/objects.html">objects</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
