--- a/modules/objects.html
+++ b/modules/objects.html
@@ -14,9 +14,12 @@
 <ul class="tsd-breadcrumb">
 <li><a href="../modules.html">@ffstudios/ribbit.js</a></li>
 <li><a href="objects.html">objects</a></li></ul>
-<h1>Namespace objects</h1></div><aside class="tsd-sources">
+<h1>Namespace objects</h1></div>
+<section class="tsd-panel tsd-comment">
+<div class="tsd-comment tsd-typography"><p>Ribbit.js includes a number of default objects for basic rendering and debuggigng.</p>
+</div></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/objects/index.mts#L1">objects/index.mts:1</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/objects/index.mts#L1">objects/index.mts:1</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <h3 class="tsd-index-heading uppercase">Index</h3>
@@ -48,6 +51,7 @@
 <li class="current"><a href="../modules.html">@ffstudios/ribbit.js</a>
 <ul>
 <li class="tsd-kind-namespace"><a href="components.html">components</a></li>
+<li class="tsd-kind-namespace"><a href="macros.html">macros</a></li>
 <li class="current selected tsd-kind-namespace"><a href="objects.html">objects</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
