--- a/classes/Texture.html
+++ b/classes/Texture.html
@@ -25,7 +25,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">Texture</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L7">Texture.mts:7</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L7">Texture.mts:7</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -68,7 +68,7 @@
 <h4 class="tsd-returns-title">Returns <a href="Texture.html" class="tsd-signature-type" data-tsd-kind="Class">Texture</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L20">Texture.mts:20</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L20">Texture.mts:20</a></li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="constructor.new_Texture-1">new <wbr/>Texture<span class="tsd-signature-symbol">(</span>ribbit<span class="tsd-signature-symbol">: </span><a href="Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a>, image<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">HTMLImageElement</span>, scale<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="Texture.html" class="tsd-signature-type" data-tsd-kind="Class">Texture</a><a href="#constructor.new_Texture-1" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Create a new texture from an image.</p>
@@ -89,7 +89,7 @@
 <h4 class="tsd-returns-title">Returns <a href="Texture.html" class="tsd-signature-type" data-tsd-kind="Class">Texture</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L26">Texture.mts:26</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L26">Texture.mts:26</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="color" class="tsd-anchor"></a>
@@ -98,7 +98,7 @@
 <div class="tsd-comment tsd-typography"><p>The color of this texture, if any.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L11">Texture.mts:11</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L11">Texture.mts:11</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="id" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>id</span><a href="#id" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">id<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -106,14 +106,14 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#id">id</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L24">RibbitObject.mts:24</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L24">RibbitObject.mts:24</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="image" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <code class="tsd-tag ts-flagReadonly">Readonly</code> <span>image</span><a href="#image" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">image<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">HTMLImageElement</span></div>
 <div class="tsd-comment tsd-typography"><p>The image of this texture, if any.</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L15">Texture.mts:15</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L15">Texture.mts:15</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-protected tsd-is-inherited"><a id="log" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <code class="tsd-tag ts-flagOptional">Optional</code> <code class="tsd-tag ts-flagReadonly">Readonly</code> <span>log</span><a href="#log" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">log<span class="tsd-signature-symbol">?:</span> <a href="../types/Logan.html" class="tsd-signature-type" data-tsd-kind="Type alias">Logan</a></div>
@@ -121,7 +121,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#log">log</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L28">RibbitObject.mts:28</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L28">RibbitObject.mts:28</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="ribbit" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>ribbit</span><a href="#ribbit" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">ribbit<span class="tsd-signature-symbol">:</span> <a href="Ribbit.html" class="tsd-signature-type" data-tsd-kind="Class">Ribbit</a></div>
@@ -129,12 +129,12 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#ribbit">ribbit</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L33">RibbitObject.mts:33</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L33">RibbitObject.mts:33</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="scale" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagReadonly">Readonly</code> <span>scale</span><a href="#scale" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">scale<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> = 1</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L27">Texture.mts:27</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L27">Texture.mts:27</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class"><a id="details" class="tsd-anchor"></a>
@@ -147,7 +147,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Record</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">, </span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#details">details</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/Texture.mts#L37">Texture.mts:37</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/Texture.mts#L37">Texture.mts:37</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class tsd-is-inherited"><a id="toString" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>to<wbr/>String</span><a href="#toString" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
@@ -159,7 +159,7 @@ details returned by the <a href="Texture.html#details">details</a> method. This 
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4><aside class="tsd-sources">
 <p>Inherited from <a href="RibbitObject.html">RibbitObject</a>.<a href="RibbitObject.html#toString">toString</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/c820350/src/RibbitObject.mts#L74">RibbitObject.mts:74</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/futuristic-frogs/ribbit.js/blob/72016af/src/RibbitObject.mts#L74">RibbitObject.mts:74</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -182,6 +182,7 @@ details returned by the <a href="Texture.html#details">details</a> method. This 
 <li><a href="../modules.html">@ffstudios/ribbit.js</a>
 <ul>
 <li class="tsd-kind-namespace"><a href="../modules/components.html">components</a></li>
+<li class="tsd-kind-namespace"><a href="../modules/macros.html">macros</a></li>
 <li class="tsd-kind-namespace"><a href="../modules/objects.html">objects</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
