--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <li class="current selected"><a href="modules.html">@ffstudios/ribbit.js</a>
 <ul>
 <li class="tsd-kind-namespace"><a href="modules/components.html">components</a></li>
+<li class="tsd-kind-namespace"><a href="modules/macros.html">macros</a></li>
 <li class="tsd-kind-namespace"><a href="modules/objects.html">objects</a></li></ul></li></ul></div></details></nav>
 <nav class="tsd-navigation secondary menu-sticky">
 <ul>
@@ -89,8 +90,7 @@
 <li class="tsd-kind-interface"><a href="interfaces/RibbitOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>Ribbit<wbr/>Options</a></li>
 <li class="tsd-kind-type-alias"><a href="types/Constructor.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-4194304-path"></rect><path d="M11.31 16V8.224H8.91V7.24H14.79V8.224H12.39V16H11.31Z" fill="var(--color-text)" id="icon-4194304-text"></path></svg>Constructor</a></li>
 <li class="tsd-kind-type-alias"><a href="types/ConstructorType.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Constructor<wbr/>Type</a></li>
-<li class="tsd-kind-type-alias"><a href="types/Logan.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Logan</a></li>
-<li class="tsd-kind-function"><a href="functions/vec.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-function)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-64-path"></rect><path d="M9.39 16V7.24H14.55V8.224H10.446V11.128H14.238V12.112H10.47V16H9.39Z" fill="var(--color-text)" id="icon-64-text"></path></svg>vec</a></li></ul></nav></div></div>
+<li class="tsd-kind-type-alias"><a href="types/Logan.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-4194304-path"></use><use href="#icon-4194304-text"></use></svg>Logan</a></li></ul></nav></div></div>
 <div class="container tsd-generator">
 <p>Generated using <a href="https://typedoc.org/" target="_blank">TypeDoc</a></p></div>
 <div class="overlay"></div><script src="assets/main.js"></script></body></html>
